fix mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,14 @@ a:hover {
     }
 }
 
+@media (max-width: 420px) {
+    .the-grid {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: repeat(auto-fit, minmax(100px, 1fr));
+    }
+
+}
+
 
 /* Slideshow template from https://www.w3schools.com/howto/howto_js_slideshow.asp  */
 /* Slideshow container */
